# conquest-mode-v3

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/conquest/: CONQUEST_VS_COMPETITORS.md  LP_DRAFT.md
plugins/conquest/: __init__.py  accuracy_benchmark.py  distribution_fixtures.py  feedback_persistence.py  gravity_engine.py  knowledge_base.py  multi_persona_inference.py  neo4j_constraint_solver.py  physics_self_validator.py  pipeline_v3.py  probabilistic_bim.py  prompts.py  relationship_validator.py  schemas.py  vlm_analyzer.py
scripts/: conquest_distribution_check.py  conquest_visual_verify.py
tests/: test_conquest_distribution_check.py  test_conquest_pack83.py  test_conquest_pack83_phase2.py  test_conquest_pack83_phase3.py  test_conquest_pack83_phase4.py
